--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -29,3 +29,8 @@ img {
   display: flex;
   align-items: center;
 }
+.alineacion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
