--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh;*/
   background: #212121;
 }
 
@@ -33,6 +33,7 @@ img {
 .container_o {
   display: flex;
   align-items: center;
+  background: #212121;
 }
 
 .alineacion {
